<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.entrance.ConfirmEmail4PasswordReset">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="22dp">
        <TextView
            style="@style/ScreenTitle"
            android:text="@string/change_password_title"/>
        <FrameLayout
            style="@style/InputField.FrameLayout"
            android:layout_marginBottom="19dp">
            <EditText
                android:id="@+id/edit_text_password"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:autofillHints="password"
                style="@style/InputField"/>
        </FrameLayout>

        <FrameLayout
            style="@style/InputField.FrameLayout"
            android:layout_marginBottom="19dp">
            <EditText
                android:id="@+id/edit_text_confirm_password"
                android:hint="@string/confirm_password_hint"
                android:inputType="textPassword"
                android:autofillHints="password"
                style="@style/InputField"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/confirm_btn"
                android:layout_width="155dp"
                android:layout_height="match_parent"
                android:text="@string/confirm_btn_str"
                style="@style/CorneredButton"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>