<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.entrance.ConfirmEmail4PasswordReset">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="22dp">
        <TextView
            style="@style/ScreenTitle"
            android:text="@string/change_password_title"/>
        <FrameLayout
            style="@style/InputField.FrameLayout"
            android:layout_marginBottom="19dp">
            <EditText
                android:id="@+id/edit_text_email"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:autofillHints="email"
                style="@style/InputField"/>
        </FrameLayout>

        <FrameLayout
            style="@style/InputField.FrameLayout"
            android:layout_marginBottom="19dp">
            <EditText
                android:id="@+id/edit_text_code"
                android:hint="@string/code_from_email_hint"
                android:autofillHints="code"
                android:inputType="textVisiblePassword"
                style="@style/InputField" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/send_btn"
                android:layout_width="155dp"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:text="@string/send_btn_str"
                style="@style/CorneredButton"/>

            <Button
                android:id="@+id/confirm_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:visibility="invisible"
                android:clickable="false"
                android:text=""
                style="@style/CorneredButton"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>