<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.entrance.Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:paddingHorizontal="41dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingVertical="19dp"
            android:text="Registration"
            android:textColor="#000000"
            android:textSize="36sp"/>
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:background="@drawable/bg_input_field"
            android:layout_marginBottom="19dp">
            <EditText
                android:id="@+id/edit_text_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="255"
                android:hint="@string/user_name_hint"
                android:inputType="textPersonName"
                android:autofillHints=""
                android:background="#00000000"
                android:layout_gravity="center"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:background="@drawable/bg_input_field"
            android:layout_marginBottom="19dp">
            <EditText
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="255"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:autofillHints=""
                android:background="#00000000"
                android:layout_gravity="center"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:background="@drawable/bg_input_field"
            android:layout_marginBottom="19dp">
            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="255"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:autofillHints=""
                android:background="#00000000"
                android:layout_gravity="center"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:background="@drawable/bg_input_field"
            android:layout_marginBottom="19dp">
            <EditText
                android:id="@+id/edit_text_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="255"
                android:hint="@string/confirm_password_hint"
                android:inputType="textPassword"
                android:autofillHints=""
                android:background="#00000000"
                android:layout_gravity="center"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/register_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="Register"
                android:textColor="#000000"
                app:backgroundTint="#C4C4C4"
                app:cornerRadius="29dp" />
            <Button
                android:id="@+id/sing_in_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:text="Sing in"
                android:textColor="#000000"
                app:backgroundTint="#C4C4C4"
                app:cornerRadius="29dp" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>